# duckdb-setup

./: .gitignore  README.md  download_financial_data.py  duckdb_basics.py  integration_assessment.py  integration_patterns.py  performance_comparison.py  pyproject.toml  realtime_integration.py  test_instalation.py
