[tool.poetry]
name = "finance-analysis"
version = "0.1.0"
description = "A project for financial data analysis using DuckDB, Pandas, yFinance, and visualization tools."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
duckdb = "*"
pandas = "*"
yfinance = "*"
matplotlib = "*"
seaborn = "*"
jupyterlab = "*"
pyarrow = "^21.0.0"
fastparquet = "^2024.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
